feat: manifest endpoint
